# DEF-W9-29_NAS-DETR

./: ASSETS.md  CLAUDE.md  NEXT_STEPS.md  README.md  pyproject.toml
benchmarks/: local_eval_report.json  paper_metrics.md
configs/: debug.toml  default.toml  paper.toml
docker/: Dockerfile.serve  docker-compose.serve.yml
docs/: production_checklist.md  ros2_topics.md
prds/: PRD-01-foundation.md  PRD-02-core-model.md  PRD-03-inference.md  PRD-04-evaluation.md  PRD-05-api-docker.md  PRD-06-ros2-integration.md  PRD-07-production.md  README.md
scripts/: verify_assets.py
src/anima_nasdetr/: __init__.py  api.py  config.py  eval.py  export.py  infer.py  losses.py  ros2_node.py  train.py
src/anima_nasdetr/data/: urpc.py
src/anima_nasdetr/models/: backbone.py  blocks.py  decoder.py  nasdetr.py  query.py
src/anima_nasdetr/nas/: entropy.py  search.py
src/anima_nasdetr/utils/: boxes.py
tasks/: INDEX.md  PRD-0101.md  PRD-0102.md  PRD-0201.md  PRD-0202.md  PRD-0203.md  PRD-0204.md  PRD-0205.md  PRD-0206.md  PRD-0207.md  PRD-0301.md  PRD-0401.md  PRD-0501.md  PRD-0502.md  PRD-0601.md  PRD-0701.md  PRD-0702.md
tests/: test_backbone.py  test_config.py  test_losses.py  test_model_forward.py  test_search.py
